# common_c

./: .gitignore  CMakeLists.txt  README.md  any_probe
lib/: any_probe.cpp
lib/helpers/: filelib.cpp  filelib.h  format.h  keyboard.cpp  keyboard.h  strlib.cpp  strlib.h  time.cpp  time.h
lib/helpers/probes/: keyboard.cpp
lib/image/: image.cpp  image.h  image_composer.cpp  image_composer.h  image_filters.cpp
lib/json/: jdict.cpp  jdict.h  jfiles.cpp  jfiles.h  jlist.cpp
lib/json/probes/: jsoncpp.cpp  jsoncpp_append.cpp
lib/math/: plane.cpp  plane.h  rect.cpp  rect.h
lib/read_writer/: read_writer.h  read_writer_serial.cpp  read_writer_tcp.cpp
lib/video_in/: in.h  in_files.cpp  in_gstreamer.cpp  in_lccv.cpp  in_libcamera.cpp  lccv.hpp  libcamera.cpp
lib/video_in/probes/: lccv.cpp  libcamera.cpp  video.cpp
lib/video_out/: out.h  out_files.cpp  out_files_th.cpp  out_opencv.cpp  out_sdl.cpp  out_stub.cpp  out_window.cpp
